Fixed the issue (#49)